--- a/shortlink/Gemfile
+++ b/shortlink/Gemfile
@@ -27,10 +27,12 @@ gem 'uglifier', '>= 1.3.0'
 gem 'bcrypt', '~> 3.1.7'
 
 # TODO: Add Devise
-# TODO: Add better_errors and binding_in_context
 
 group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  # Better error pages with a working REPL
+  gem 'better_errors'
+  gem 'binding_of_caller'
 end
 
