--- a/shortlink/Gemfile
+++ b/shortlink/Gemfile
@@ -23,10 +23,10 @@ gem 'uglifier', '>= 1.3.0'
 
 # Backend
 
+# User authentication and management
+gem 'devise'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
-
-# TODO: Add Devise
 
 group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
