--- a/shortlink/Gemfile
+++ b/shortlink/Gemfile
@@ -14,6 +14,8 @@ gem 'passenger', '>= 5.0.25', require: 'phusion_passenger/rack_handler'
 
 # Frontend
 
+# Bootstrap for HTML layout
+gem 'bootstrap-sass', '~> 3.3.6'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Use SCSS for stylesheets
